--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,17 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "ctime": "cpp",
-        "span": "cpp"
-    }
+        "span": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "cstdarg": "cpp",
+        "map": "cpp",
+        "ratio": "cpp",
+        "format": "cpp",
+        "iomanip": "cpp",
+        "sstream": "cpp",
+        "cinttypes": "cpp",
+        "variant": "cpp"
+    },
+    "cmake.sourceDirectory": "C:/Users/stefh/mathlib/music"
 }
